    E.g. select([SomeClass]).where(SomeClass.somerelationship)
    would render SELECT from "someclass" and use the
    primaryjoin of "somerelationship" as the WHERE
    clause.   This changes the previous meaning
    of "SomeClass.somerelationship" when used in a
    core SQL context; previously, it would "resolve"
    to the parent selectable, which wasn't generally
    useful.  Related to [ticket:2245].

  - [feature] The registry of classes
    in declarative_base() is now a
    WeakValueDictionary.  So subclasses of
    "Base" that are dereferenced will be
    garbage collected, *if they are not
    referred to by any other mappers/superclass
    mappers*. See the next note for this ticket.
    [ticket:2526]

  - [feature] Conflicts between columns on
    single-inheritance declarative subclasses,
    with or without using a mixin, can be resolved
    using a new @declared_attr usage described
    in the documentation.  [ticket:2472]

  - [feature] declared_attr can now be used
    on non-mixin classes, even though this is generally
    only useful for single-inheritance subclass
    column conflict resolution.  [ticket:2472]

  - [feature] declared_attr can now be used with
    attributes that are not Column or MapperProperty;
    including any user-defined value as well
    as association proxy objects.  [ticket:2517]

  - [bug] Fixed a disconnect that slowly evolved
    between a @declared_attr Column and a
    directly-defined Column on a mixin. In both
    cases, the Column will be applied to the
    declared class' table, but not to that of a
    joined inheritance subclass.   Previously,
    the directly-defined Column would be placed
    on both the base and the sub table, which isn't
    typically what's desired.  [ticket:2565]

  - [feature] *Very limited* support for
    inheriting mappers to be GC'ed when the
    class itself is deferenced.  The mapper
    must not have its own table (i.e.
    single table inh only) without polymorphic